2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* doctools.test: Updated test 8.4 for changes in the formatting of
	  warnings.

2007-03-20  Andreas Kupries  <andreask@activestate.com>

	* apps/dtplite: Added a block of meta data.

2007-03-20  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.wiki: Added MD pragma excluding a bogus dependency
	  from consideration.

2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctoc.tcl: Extended MD pragmas declaring the ownership of
	* docidx.tcl: various non-code files.
	* doctools.tcl:

	* support/devel/sak/doc/doc.tcl: Modified to print warnings even
	  if processed was stopped by an error.

	* mpformats/c.msg:  Added messages for a set of newly deprecated
	* mpformats/de.msg: commands and list types. Added proper umlauts
	* mpformats/en.msg: to the german messages.
	* mpformats/fr.msg:

	* doctools.tcl: Added a plugin API command (dt_where), providing
	  information about the current location, to provide location data
	  to warnings.

	* checker_toc.tcl: Language change (doctoc, docidx). Comments in
	* checker_idx.tcl: the input are now swallowed by the checker
	  layer and not propagated to the backend anymore.
	
	* checker.tcl: Language changes.
	  -- Comments are swallowed, backends do not see them anymore.
	  -- 'require'ments an now go everywhere in the header, not only
	  after the 'desc'riptions.
	  -- Warnings now have location information.
	  -- The list types 'bullet', 'arg', 'opt', 'cmd', and 'tkoption'
	  are now deprecated. They are replaced by 'itemized',
	  'arguments', 'options', 'commands', and 'tkoptions', and their
	  short forms 'items', 'args', 'opts', and 'cmds'.
	  -- 'para' can now be used inside of lists. Conversely 'nl' works
	  outside of lists too. The two commands are identical now, and
	  'nl' is deprecated.
	  -- The list entry command 'lst_item' has been deprecated,
	  replaced by 'def'. Additionally the possible misspellings